--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <b id="name">Your name will appear here</b>
     <script>
      function generate(){
-       var names = ["Elon", "Musk", "Elon Musk", "SpaceX", "Tesla", "Tech", "Future", "NASA", "Unity", "Fans", "Rewind", "World", "Land", "Space", "Everything", "Time", "Watch", "Vision", "News", "Explained", "Rewind", "Central", "Journey", "Live","New", "Update", "All", "All about"
+       var names = ["Unity", "Fans", "Rewind", "World", "Land", "Space", "Everything", "Time", "Watch", "Vision", "News", "Explained", "Rewind", "Central", "Journey", "Live","New", "Update", "All", "All about"
 ]; 
      var words = ["Elon", "Musk", "Elon Musk", "SpaceX", "Tesla", "Tech", "Future", "NASA"]
      var random1 = Math.floor(Math.random() * names.length);
      var random2 = Math.floor(Math.random() * words.length);
 
-    document.getElementById("name").innerHTML = names[random1]+" "+ words[random2] ;
+    document.getElementById("name").innerHTML = words[random2]+" "+names[random1];
 
       }
   </script>
