--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 <body>
     <img src="CRINGE.png"/>
     <h1>CringeX Channel Name Generator</h1>
-
-    <!-- HTML !-->
     <button class="button-27" role="button" onclick="generate();">GENERATE!</button>
 <br><br><br>
     <br><br><br>
@@ -20,9 +18,9 @@
     <b id="name">Your name will appear here</b>
     <script>
      function generate(){
-       var names = ["Unity", "Fans", "Rewind", "World", "Land", "Space", "Everything", "Time", "Watch", "Vision", "News", "Explained", "Rewind", "Central", "Journey", "Live","New", "Update", "All", "All about"
+       var names = ["Unity", "Fans", "Rewind", "World", "Land", "Space",  "Time", "Watch", "Vision", "News", "Explained", "Rewind", "Central", "Journey", "Live", "Update"
 ]; 
-     var words = ["Elon", "Musk", "Elon Musk", "SpaceX", "Tesla", "Tech", "Future", "NASA"]
+     var words = ["All", "All about","Everything", "Elon", "Musk", "Elon Musk", "SpaceX", "Tesla", "Tech", "Future", "NASA"]
      var random1 = Math.floor(Math.random() * names.length);
      var random2 = Math.floor(Math.random() * words.length);
 
