--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>CringeX</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="public/style/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
     <img src="CRINGE.png"/>
     <h1>CringeX Channel Name Generator</h1>
+    
     <button class="button-27" role="button" onclick="generate();">GENERATE!</button>
 <br><br><br>
     <br><br><br>
 
     <b id="name">Your name will appear here</b>
+    <br>
+        <br>
+    <br>
+    <br>
+    <b>Looking for the leaderboard? Be patient, it's currently under development.</b>
     <script>
      function generate(){
        var names = ["Unity", "Fans", "Rewind", "World", "Land", "Space",  "Time", "Watch", "Vision", "News", "Explained", "Rewind", "Central", "Journey", "Live", "Update"
